--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>El capitán v.0.0.1 </title>
-
 </head>
-
 <body style="text-align: center;">
+  <img src="assets/images/la1.png" alt="" width="500" align="center">
+  <h1>¿Qué es Laboratoria?</h1>
+  <p align="center">En Laboratoria identificamos jóvenes de bajos recursos
+   con un potencial enorme y les damos la oportunidad de convertirse
+   en desarrolladoras web.
+   El resultado es una gran transformación para cada estudiante y una gran
+   fuente de talento femenino de América Latina para el mundo tech.</p>
+  <img src="assets/images/lab2.jpg" alt="" width="700" align="center">
+  <h2>NUESTRO IMPACTO</h2>
+  <h1>Mejor empleabilidad y mayor impacto en ingresos que el "US Bootcamp" promedio</h1>
+  <p>El contexto socio económico de nuestras estudiantes no es una desventaja.
+    La adversidad que han enfrentado las ha hecho más fuertes y comprometidas
+    para aprender en Laboratoria y valorar el trabajo. Por eso tenemos
+    resultados superiores a los del "coding bootcamp" promedio de los EEUU
+    de acuerdo a Course Report.</p>
+  <h3 align="left">Temas:</h3>
+  <button>Sprint 1</button> <button>Sprint 2</button> <button>Sprint 3</button>
+  <div id = nombre></div>
 
 </body>
 </html>
